--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -23,7 +23,7 @@
             padding: 0.313rem;
             font-size: 24px;
             font-weight: 900;
-            cursor: pointer;
+            // cursor: pointer;
             border: none;
         }
 
@@ -36,7 +36,7 @@
 
         .btn-close {
             margin-left: auto;
-            cursor: pointer;
+            // cursor: pointer;
             width: 2rem;
             height: 2rem;
             border-radius: 50%;
@@ -62,7 +62,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    cursor: pointer;
+    // cursor: pointer;
 
     .sidenav-nav-item {
         width: 100%;
