--- a/src/app/settings/customize/customize.component.html
+++ b/src/app/settings/customize/customize.component.html
@@ -1,1 +1,105 @@
-<p>customize works!</p>
+<h1>Settings</h1>
+
+<!-- <mat-toolbar align="end">
+    <span class="example-spacer"></span>
+</mat-toolbar> -->
+
+<div class="main-body">
+
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+        <div mat-dialog-actions align="end" class="action">
+            <button mat-raised-button color="primary" (click)="openDialogItem()">
+                Add Items
+            </button>
+
+        </div>
+
+    </mat-form-field>
+
+    <div class="table-container">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="itemName">
+                <th mat-header-cell *matHeaderCellDef> Item Name </th>
+                <td mat-cell *matCellDef="let row"> {{row.itemName}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef> Email </th>
+                <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef> Price </th>
+                <td mat-cell *matCellDef="let row"> {{row.price |
+                    currency:'IDR'}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef> Date </th>
+                <td mat-cell *matCellDef="let row"> {{row.date | date}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="quality">
+                <th mat-header-cell *matHeaderCellDef> Quality </th>
+                <td mat-cell *matCellDef="let row"> {{row.quality}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef> Address</th>
+                <td mat-cell *matCellDef="let row"> {{row.address}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="company">
+                <th mat-header-cell *matHeaderCellDef> Company </th>
+                <td mat-cell *matCellDef="let row"> {{row.company}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="completeness">
+                <th mat-header-cell *matHeaderCellDef> Completeness </th>
+                <td mat-cell *matCellDef="let row"> {{row.completeness}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="stock">
+                <th mat-header-cell *matHeaderCellDef> Stock </th>
+                <td mat-cell *matCellDef="let row"> {{row.stock}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let row">
+
+                    <button mat-icon-button color="primary" (click)="editItem(row)">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button color="warn" (click)="deleteItem(row.id)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter
+                    "{{input.value}}"</td>
+            </tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    </div>
+</div>
